--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "@types/express": "^4.17.0",
     "@types/jsonwebtoken": "^8.3.2",
     "@types/mongoose": "^5.5.8",
+    "@types/mongoose-auto-increment": "^5.0.31",
     "bcrypt": "^3.0.6",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.6.4",
+    "mongoose-auto-increment": "^5.0.1",
     "nodemon": "^1.19.1"
   }
 }
